spring-petclinic-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
  labels:
    app: spring-petclinic
spec:
  replicas: 3  # 배포할 복제본 수 (클러스터의 부하 분산을 위해 여러 개의 복제본을 실행)
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
      - name: spring-petclinic
        image: goldengarden/spring-petclinic:latest  # Docker 이미지 주소
        ports:
        - containerPort: 8080  # 컨테이너에서 노출할 포트
        resources:
          limits:
            memory: "512Mi"  # 메모리 리미트
            cpu: "1"         # CPU 리미트
          requests:
            memory: "256Mi"  # 메모리 요청량
            cpu: "500m"      # CPU 요청량
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-service
spec:
  selector:
    app: spring-petclinic  # 서비스가 연결할 Pod를 선택하는 라벨
  ports:
    - protocol: TCP
      port: 80           # 외부에서 접근할 포트
      targetPort: 8080    # 컨테이너 내부 포트
  type: LoadBalancer
