spring-petclinic-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-petclinic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: spring-petclinic.example.com  # Ingress를 통해 접근할 도메인
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-petclinic-service
            port:
              number: 80
